<resources>
    <string name="app_name">Inventory App</string>
    <string name="name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_eg">24*7 Super Market</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="supplier_phone_eg">+91-1234567890</string>
    <string name="image">Image</string>
    <string name="browse_image">Browse Image</string>
    <string name="submit">Submit</string>
    <string name="place_more_order">Place more order</string>
    <string name="dummy_data">Insert dummy data</string>
    <string name="add_product">Add new product to list</string>
    <string name="add_new_item">Add new item to list</string>
    <string name="edit_item">Edit Items</string>
    <string name="place_order">Place order for this item through call</string>
    <string name="phone">Phone</string>
    <string name="unsaved_prompt">There are unsaved changes in the product information. Do you want to continue?</string>
    <string name="discard">Discard</string>
    <string name="continue_editing">Continue Editing</string>
    <string name="askToDelete">Do you want to delete the item?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="product_missing">Missing product</string>
    <string name="delete_this_item">Delete this item</string>
    <string name="delete_whole_list">Delete whole list</string>
    <string name="empty_cart">Add some items to your list.</string>
</resources>